@@ -10,12 +10,8 @@ import es.upm.miw.apaw.domain.models.bank.Loan;
 import es.upm.miw.apaw.domain.persistenceports.bank.BankAccountPersistence;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
-
-import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Stream;
 
 @Repository("bankAccountPersistence")
 public class BankAccountPersistenceMongodb implements BankAccountPersistence {
@@ -48,7 +44,7 @@ public class BankAccountPersistenceMongodb implements BankAccountPersistence {
     }
 
     @Override
-    public List<Loan> applyANewLoanForABankAccount(String accountNumber, Loan loan) {
+    public Stream<Loan> applyANewLoanForABankAccount(String accountNumber, Loan loan) {
         BankAccountEntity bankAccount = this.bankAccountRepository.findByAccountNumber(accountNumber)
                 .orElseThrow(() -> new NotFoundException(BANK_ACCOUNT_ERROR_MESSAGE + accountNumber));
         if (bankAccount.getLoansApplied()==null){
@@ -56,7 +52,7 @@ public class BankAccountPersistenceMongodb implements BankAccountPersistence {
         }
         bankAccount.getLoansApplied().add(new LoanEntity(loan));
 
-        return this.bankAccountRepository.save(bankAccount).toBankAccount().getLoansApplied();
+        return this.bankAccountRepository.save(bankAccount).toBankAccount().getLoansApplied().stream();
     }
 
     @Override
@@ -74,17 +70,16 @@ public class BankAccountPersistenceMongodb implements BankAccountPersistence {
     }
 
     @Override
-    public BigDecimal obtainTotalQuantity(UUID accountHolder) {
+    public Stream<BankAccount> findByAccountHolders(UUID accountHolder) {
 
-        List<BankAccount> bankAccounts = this.bankAccountRepository.findByAccountHolders(accountHolder).stream()
-                .map(BankAccountEntity::toBankAccount)
-                .toList();
+        return this.bankAccountRepository.findByAccountHolders(accountHolder).stream()
+                .map(BankAccountEntity::toBankAccount);
+    }
 
-        return bankAccounts.stream()
-                .flatMap(bankAccount -> Optional.ofNullable(bankAccount.getLoansApplied())
-                        .orElse(List.of())
-                        .stream())
-                .map(Loan::getQuantity)
-                .reduce(BigDecimal.ZERO, BigDecimal::add);
+    @Override
+    public Stream<BankAccount> findByLoansAppliedCondition(String condition) {
+        return Optional.ofNullable(this.bankAccountRepository.findByLoansAppliedCondition(condition)).orElse(Collections.emptyList())
+                .stream()
+                .map(BankAccountEntity::toBankAccount);
     }
 }
